<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1"></TextView>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            >
//Ans B
            <RadioButton
                android:id="@+id/radio00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A. Lok Sabha" />

            <RadioButton
                android:id="@+id/radio01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B  Rajya Sabha " />

            <RadioButton
                android:id="@+id/radio02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C. Parliament" />
            <RadioButton
                android:id="@+id/radio03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D. Adhoc Committee " />
        </RadioGroup>

        //Question2 --- Ans C

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2"></TextView>
        <RadioGroup
            android:id="@+id/radioGroup11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            >

            <RadioButton
                android:id="@+id/radio11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A. Council of States" />

            <RadioButton
                android:id="@+id/radio12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B. The Upper House " />

            <RadioButton
                android:id="@+id/radio13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C. The House of the People" />
            <RadioButton
                android:id="@+id/radio14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D. Parliament" />
        </RadioGroup>


        //Question3 -- Ans D

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3"></TextView>
        <RadioGroup
            android:id="@+id/radioGroup22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            >

            <RadioButton
                android:id="@+id/radio21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A. 220" />

            <RadioButton
                android:id="@+id/radio22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B. 235 " />

            <RadioButton
                android:id="@+id/radio23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C. 238" />
            <RadioButton
                android:id="@+id/radio24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D. 250" />
        </RadioGroup>


        //Question4 ---  Ans D

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4"></TextView>
        <RadioGroup
            android:id="@+id/radioGroup33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            >

            <RadioButton
                android:id="@+id/radio31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A. 220" />

            <RadioButton
                android:id="@+id/radio32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B. 235 " />

            <RadioButton
                android:id="@+id/radio33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C. 238" />
            <RadioButton
                android:id="@+id/radio34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D. 250" />
        </RadioGroup>


        //Question5 -- Ans B

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5"></TextView>
        <RadioGroup
            android:id="@+id/radioGroup44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            >

            <RadioButton
                android:id="@+id/radio41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A. President of India" />

            <RadioButton
                android:id="@+id/radio42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B. Vice President of India" />

            <RadioButton
                android:id="@+id/radio43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C. Prime Minister of India" />
            <RadioButton
                android:id="@+id/radio44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D. Chosen from the members of the Rajya Sabha" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Result"></TextView>
        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Score"></TextView>
        <Button
            android:id="@+id/SubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Submit"></Button>


    </LinearLayout>

</ScrollView>